add ninja animation frames, init background

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" ><!-- manifest="jumpBump.mf" -->
+<!DOCTYPE html>
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Canvas JumpBump</title>
-
-	<link href="css/styles.css" rel="stylesheet" type="text/css" />
-	<script src="js/libs/zepto.min.js"></script>
-	<script src="js/libs/require.js" data-main="js/main.js"></script>
+	<link type="text/css" rel="stylesheet" href="styles/anyGame.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+	<script type="text/javascript" src="libs/require.js" data-main="ninja.js"></script>
 </head>
-
 <body>
-	<canvas id="game" width="1200" height="768"></canvas>
+	<canvas id='game' width="100" height="100"></canvas>
 </body>
 </html>
