--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="styles/anyGame.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-	<script type="text/javascript" src="libs/require.js" data-main="ninja.js"></script>
+	<script type="text/javascript" src="libs/require.js" data-main="js/arena.js"></script>
 </head>
 <body>
 	<canvas id='game' width="100" height="100"></canvas>
