--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="styles/anyGame.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
+    <script src="http://markknol.github.io/console-log-viewer/console-log-viewer.js"></script>
 	<script type="text/javascript" src="libs/require.js" data-main="js/arena.js"></script>
 </head>
 <body>
