--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
 <body>
     <div id="game"></div>
     <script src="./phaser.min.js"></script>
+    <script src="./phaser-debug.js"></script>
 	<script type="text/javascript" src="../libs/require.js" data-main="./Main.js"></script>
 
 </body>
